--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,10 @@ nav ul li a:hover::after {
   text-decoration: none;
   margin-top: 10px;
   margin-right: 30px;
+  transition: transform 0.4s;
+}
+.social-media a:hover {
+  transform: translateY(-5px);
 }
 
 .tab-titles {
@@ -391,8 +395,6 @@ form .submit-btn {
   font-size: 40px;
   font-weight: 600;
 }
-/* /////////////////////////////////////////////////// slider */
-
 .slide-container {
   max-width: 1120px;
   width: 100%;
@@ -583,7 +585,6 @@ form .submit-btn {
     position: fixed;
     top: 15px;
     width: 150px;
-    /* height: 100vh; */
     right: -150px;
     z-index: 20;
     transition: right 0.5s;
@@ -648,5 +649,16 @@ form .submit-btn {
   }
   .swiper-navBtn {
     display: none;
+  }
+  .contact-left p {
+    margin: 15px 0px 0px 0px;
+    font-size: 16px;
+  }
+  .contact-left p i {
+    margin-right: 10px;
+    font-size: 18px;
+  }
+  .work-list {
+    grid-auto-rows: 40%;
   }
 }
