--- a/assets/css/edit.css
+++ b/assets/css/edit.css
@@ -1,43 +1,81 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-  }
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-.infoFields {
-    display: flex;
-    flex-direction: column;
-    row-gap: 5px;
-    margin-top: 10px;
-  }
-  #editForm button {
-    margin-top: 10px;
-    margin-right: 10px;
-    /* padding: 5px; */
-    border-radius: 5px;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "poppins", sans-serif;
+}
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: radial-gradient(
+    circle,
+    rgba(238, 174, 202, 1) 0%,
+    rgba(148, 187, 233, 1) 100%
+  );
+}
+#editForm {
+  display: flex;
+  color: teal;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #f5f5f5;
+  border-radius: 10px;
+  padding: 20px;
+  width: 25%;
+}
+#editForm > div {
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+  margin-top: 20px;
+  width: 100%;
+}
+#editForm button {
+  padding: 10px 25px;
+  font-weight: 600;
+  border-radius: 10px;
+  font-size: 20px;
+  border: none;
+  color: white;
+  margin-right: 15px;
+}
 .editButton {
-    background-color: #14A44D;
-    color: white;
-    padding:  5px 15px;
-    font-weight: 600;
-    border: none;
-    cursor: pointer;
+  background-color: #14a44d;
+  color: white;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
 }
 .cancelButton a {
-    color: white;
+  color: white;
 }
 .cancelButton {
-    background-color: #DC4C64;
-    color: white;
-    padding:  5px 15px;
-    font-weight: 600;
-    border: none;
-    cursor: pointer;
+  background-color: #dc4c64;
+  color: white;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+}
+#editForm label {
+  font-weight: 600;
+  font-size: 20px;
+}
+#editForm input {
+  background: white;
+  border-radius: 5px;
+  height: 30px;
+  border: none;
+  font-size: 18px;
+  font-weight: 600;
+  text-indent: 10px;
+  outline: none;
+}
+.button {
+  margin-right: 15px;
+  flex-direction: row !important;
+  justify-content: center !important;
 }
