--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,53 +2,112 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "poppins", sans-serif;
 }
 body {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background: radial-gradient(
+    circle,
+    rgba(238, 174, 202, 1) 0%,
+    rgba(148, 187, 233, 1) 100%
+  );
 }
 section {
   margin: 0px 50px;
 }
 #createProduct {
   display: flex;
+  color: teal;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: 2px solid #f5f5f5;
+  border-radius: 10px;
+  padding: 20px;
+  width: 25%;
+}
+#createProduct input {
+  background: white;
+  border-radius: 5px;
+  height: 25px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  font-weight: 600;
+  text-indent: 10px;
 }
 .infoFields {
   display: flex;
   flex-direction: column;
   row-gap: 5px;
-  margin-top: 10px;
+  margin-top: 20px;
+}
+#createForm {
+  width: 100%;
 }
 #createForm button {
   margin-top: 10px;
   margin-right: 10px;
+  padding: 10px 15px;
+  font-weight: 600;
+  border-radius: 10px;
+  font-size: 16px;
+  border: none;
+  color: white;
+  outline: none;
 }
-/* #displayProduct {
-  height: 100vh;
-} */
-table {
-  border: 1px solid black;
-  border-collapse: collapse;
-}
-table td {
-  /* width: fit-content; */
-  object-fit: contain;
-  width: 5%;
-  /* height: %; */
-  border: 1px solid black;
-  text-align: center;
+#createForm label {
+  font-weight: 600;
   font-size: 18px;
-  padding: 5px;
+}
+#submitButton {
+  background-color: #14a44d;
+}
+#resetButton {
+  background-color: #d4403a;
+}
+
+table td {
+  width: 5%;
+  height: 60px;
+  text-align: center;
+  font-size: 16px;
+  padding: 10px;
+  color: maroon;
+  font-weight: 600;
+  word-break: break-all;
+}
+tr:nth-child(odd) td {
+  background: rgba(245, 245, 245, 0.5);
+  color: black;
 }
 table th {
-  border: 1px solid black;
+  border-bottom: 2px solid teal;
   text-align: center;
   padding: 10px;
+  color: teal;
+  height: 60px;
+  font-weight: 800;
+  vertical-align: middle;
+}
+table th:hover {
+  cursor: pointer;
+  color: black;
+}
+table > thead > tr {
+  background: white !important;
+}
+table {
+  border-collapse: collapse;
+}
+.displayTable {
+  max-height: 50vh;
+  overflow-y: scroll;
+  border: 2px solid white;
+  border-radius: 10px;
 }
 .fa-solid {
   font-size: 16px;
@@ -66,21 +125,50 @@ table th {
 }
 table td img {
   object-fit: contain;
-  width: 60%;
+  width: 40%;
+  height: 50px;
   padding: 0;
-  /* height: 10%; */
+  vertical-align: center;
 }
 #displayProduct {
   display: none;
-  width: 65%;
-  /* height: 50%; */
+  width: 60%;
 }
 #search-filter {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 10px;
+  margin: 20px 30px;
+}
+#filterById {
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+#search-filter label {
+  font-weight: 600;
+  font-size: 20px;
+  color: teal;
+}
+#search-filter input {
+  background: white;
+  border-radius: 5px;
+  height: 25px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  font-weight: 600;
+  text-indent: 10px;
 }
 tbody h2 {
   text-align: center;
+}
+.container {
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
