--- a/assets/css/view.css
+++ b/assets/css/view.css
@@ -3,24 +3,34 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+  font-family: "poppins", sans-serif;
 }
 body {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background: radial-gradient(
+    circle,
+    rgba(238, 174, 202, 1) 0%,
+    rgba(148, 187, 233, 1) 100%
+  );
 }
 .infoFields {
   display: flex;
   flex-direction: column;
   row-gap: 5px;
-  margin-top: 10px;
+  margin-top: 20px;
+  width: 100%;
 }
 #viewForm button {
-  margin-top: 10px;
-  margin-right: 10px;
-  /* padding: 5px; */
-  border-radius: 5px;
+  margin-top: 20px;
+  padding: 10px 25px;
+  font-weight: 600;
+  border-radius: 10px;
+  font-size: 20px;
+  border: none;
+  color: white;
 }
 .backButton a {
   color: white;
@@ -32,4 +42,28 @@ body {
   font-weight: 600;
   border: none;
   cursor: pointer;
+}
+#viewForm {
+  display: flex;
+  color: teal;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #f5f5f5;
+  border-radius: 10px;
+  padding: 20px;
+  width: 25%;
+}
+#viewForm label {
+  font-weight: 600;
+  font-size: 20px;
+}
+#viewForm input {
+  background: white;
+  border-radius: 5px;
+  height: 35px;
+  border: none;
+  font-size: 20px;
+  font-weight: 600;
+  text-indent: 10px;
 }
