refactor: removed all console.log's added comments in code also change some css in the project

--- a/views/uploadFile.ejs
+++ b/views/uploadFile.ejs
@@ -9,7 +9,7 @@
     <script src="/js/chooseFile.js" defer></script>
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper" id="wrapper_1">
       <h2>File Upload</h2>
       <form action="/fileUpload" id="file-upload-form">
         <div class="input-box button">
