--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,10 +15,16 @@ body {
   position: relative;
   max-width: 430px;
   width: 100%;
+  height: 47vh;
   background: #fff;
   padding: 34px;
   border-radius: 6px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
+}
+#wrapper_1 {
+  height: 25vh;
+  overflow-y: hidden;
 }
 .wrapper h2 {
   position: relative;
